Cambio en el circle

--- a/docker-workflow/circle.yml
+++ b/docker-workflow/circle.yml
@@ -10,5 +10,5 @@ dependencies:
 
 test:
     override:
-        - docker-compose run -d --no-deps node1
-        - cd node1; mocha
+        - docker-compose run -d 
+        - cd node; mocha
